# otlet-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
otlet-cli/: actions.py  arguments.py  options.py  util.py
otlet_cli/: __init__.py  actions.py  cli.py  download.py  options.py  util.py
otlet_cli/clparser/: actions.py  arguments.py  options.py
