[tool.poetry]
name = "otlet-cli"
version = "0.7.0"
description = "CLI interface for otlet, the PyPI Web API wrapper"
authors = ["Noah Tanner (nhtnr) <noahtnr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
otlet = "^0.6.0"

[tool.poetry.scripts]
otlet = "otlet-cli.cli:run_cli"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
