[tool.poetry]
name = "otlet-cli"
version = "1.0.0rc1"
description = "CLI interface for otlet, the PyPI Web API wrapper"
authors = ["Noah Tanner (nhtnr) <noahtnr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
otlet = "^1.0.0a1"

[tool.poetry.scripts]
otlet = "otlet_cli.cli:run_cli"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
