[tool.poetry]
name = "otlet-cli"
version = "1.0.0rc2"
description = "CLI interface for otlet, the PyPI Web API wrapper"
readme = "README.md"
authors = ["Noah Tanner (nhtnr) <noahtnr@gmail.com>"]
repository = "https://github.com/nhtnr/otlet-cli"
license = "MIT"
classifiers = ["Development Status :: 4 - Beta",  "Intended Audience :: Developers", "License :: OSI Approved :: MIT License"]

[tool.poetry.dependencies]
python = "^3.7"
otlet = "^1.0.0a1"

[tool.poetry.scripts]
otlet = "otlet_cli.cli:run_cli"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
